# betting_optimizer-gpu

./: Cargo.toml  README.md  build.rs  settings.json
src/: debug_optimizer.rs  gui.rs  lib.rs  main.rs
src/cuda/: kernel.cu  kernel.ptx
src/models/: settings.rs
src/optimization/: cuda.rs  mod.rs  params.rs  results.rs  strategy.rs
src/utils/: file_handler.rs  mod.rs  settings.rs
