[package]
name = "betting_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
ndarray = { version = "0.16.1", features = ["serde"] }
chrono = "0.4.39"
eframe = "0.31.0"
rfd = "0.15.2"
rayon = "1.10.0"
rustacuda = "0.1.3"
rustacuda_core = "0.1.2"
rustacuda_derive = "0.1.2"
core_affinity = "0.8.1"
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
crossbeam = "0.8.4"