[package]
name = "betting_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
ndarray = { version = "0.16.1", features = ["serde"] }
chrono = "0.4.39"
eframe = { version = "0.31.0", features = ["persistence"] }
rfd = "0.15.2"
rayon = "1.10.0"
rustacuda = "0.1.3"
rustacuda_core = "0.1.2"
rustacuda_derive = "0.1.2"
core_affinity = "0.8.1"
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
crossbeam = "0.8.4"
memmap2 = "0.9.5"  # Добавляем для оптимизации ввода/вывода больших файлов
num_cpus = "1.16.0" # Для правильного определения количества ядер
mimalloc = "0.1.43"

[profile.release]
opt-level = 3
lto = true           # Включаем Link Time Optimization
codegen-units = 1    # Повышаем оптимизации одним генератором кода
panic = "abort"      # Убираем раскрутку стека при панике
strip = true         # Удаляем символы отладки
debug = false        # Отключаем отладочную информацию

[profile.bench]
inherits = "release"
debug = true         # Включаем информацию о линиях для профилирования

[build-dependencies]
# Возможно добавление зависимостей для build.rs